--- a/BaruberAPP/app/src/main/res/layout/activity_splash.xml
+++ b/BaruberAPP/app/src/main/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary"
+    android:background="@color/black"
     android:gravity="center">
 
     <ImageView
@@ -10,8 +10,8 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/ic_logo"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/ic_logo" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -19,10 +19,10 @@
         android:layout_below="@id/ivLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:fontFamily="sans-serif-medium"
         android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="32sp"
-        android:fontFamily="sans-serif-medium" />
+        android:textSize="32sp" />
 
     <ProgressBar
         android:layout_width="wrap_content"
